[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/NPC.gd" type="Script" id=1]
[ext_resource path="res://Assets/NPCs/Baxter/BaxterGoodeboyOW.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MainScenes/OverworldMovementAnimationPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/MainScenes/OverworldMovementAnimationTree.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Player/player_shadow.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[node name="NPC" type="KinematicBody2D"]
z_index = 5
collision_layer = 17
collision_mask = 22
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -15 )
hframes = 3
vframes = 4
frame = 7

[node name="SpriteShadowDefault" type="Sprite" parent="Sprite"]
modulate = Color( 1, 1, 1, 0.376471 )
position = Vector2( 0, 1 )
texture = ExtResource( 5 )
centered = false

[node name="Shadow" type="Sprite" parent="."]
centered = false
offset = Vector2( 0, -16 )
hframes = 3
vframes = 4
frame = 7

[node name="BlockingRayCast2D" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 0, 16 )

[node name="LedgeRayCast2D" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 0, 16 )
collision_mask = 15360

[node name="DoorRayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 8 )
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="InteractableRayCast2D" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 16
collide_with_areas = true

[node name="AnimationPlayer" parent="." instance=ExtResource( 3 )]

[node name="AnimationTree" parent="." instance=ExtResource( 4 )]
active = true
parameters/playback = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="debuglabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 9.0

[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
